# localpool

./: Cargo.toml  LICENSE  README.md  TODO
.github/workflows/: ci.yml
src/: lib.rs  local_tx.rs  local_txs.rs  main.rs  rpc_command.rs  rpc_proxy.rs  test_proxy.rs
src/rpc_stub/: command_store.rs  mod.rs  rpc_stub.rs
src/test/: mod.rs
src/test_stub/: rpc_stub.rs
