[package]
name = "localpool"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"

[dev-dependencies]

[features]
default = ["test-bin"]
test-bin = []

[[bin]]
name = "rpc_stub"
path = "src/bin/rpc_stub_main.rs"
required-features = ["test-bin"]

