[package]
name = "localpool"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
warp = { version = "0.4", features = ["server"] }

[dev-dependencies]
serial_test = "3"

[features]
default = ["test-stub"]
test-stub = []

[[bin]]
name = "test_stub"
path = "src/bin/test_stub_main.rs"
required-features = ["test-stub"]

